[project]
name = "audio-data-utils"
version = "0.1.0"
description = "Utilities for handling audio files"
authors = [
    {name = "Ahsin Shabbir"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torchaudio (>=2.7.1,<3.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
